--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "migrations": "yarn typeorm migration:run"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "csv-parse": "^4.16.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
@@ -20,8 +22,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/multer": "^1.4.6",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
