--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migrations": "yarn typeorm migration:run",
-    "test": "jest"
+    "test": "jest",
+    "seed:admin": "ts-node-dev src/shared/database/seed/admin.ts"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
