--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migrations": "yarn typeorm migration:run",
     "test": "jest",
+    "create-migration": "yarn typeorm migration:create -n $NAME",
     "seed:admin": "ts-node-dev src/shared/database/seed/admin.ts"
   },
   "dependencies": {
