--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv-parse": "^4.16.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
