--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migrations": "yarn typeorm migration:run",
-    "test": "jest",
+    "test": " NODE_ENV=test jest",
     "create-migration": "yarn typeorm migration:create -n $NAME",
     "seed:admin": "ts-node-dev src/shared/database/seed/admin.ts"
   },
@@ -24,7 +24,8 @@
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.34",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +34,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/multer": "^1.4.6",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
