--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migrations": "yarn typeorm migration:run",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "create-migration": "yarn typeorm migration:create -n $NAME",
     "seed:admin": "ts-node-dev src/shared/database/seed/admin.ts"
   },
