--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "csv-parse": "^4.16.0",
     "dayjs": "^1.10.5",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.34",
-    "uuid": "^8.3.2",
-    "supertest": "^6.1.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -34,6 +36,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/multer": "^1.4.6",
+    "@types/nodemailer": "^6.4.2",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
