--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "seed:admin": "ts-node-dev src/shared/database/seed/admin.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.937.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "csv-parse": "^4.16.0",
     "dayjs": "^1.10.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mime": "^2.5.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
@@ -35,6 +39,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.6",
     "@types/nodemailer": "^6.4.2",
     "@types/supertest": "^2.0.11",
