--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.937.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "csv-parse": "^4.16.0",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
@@ -43,6 +44,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.10",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
